# fast_input

./: Cargo.toml  README.md
examples/: read_into_map.rs  read_some_lines.rs
src/: lib.rs  tests.rs
